fix: prevent overlap (#9)
* fix: prevent overlap

* chore: update build

---------

--- a/ReactRibbons.scss
+++ b/ReactRibbons.scss
@@ -7,6 +7,7 @@
     position: absolute;
     top: -10px;
     right: -10px;
+    pointer-events: none;
 }
 
 .rightCornerRibbonText {
@@ -26,6 +27,7 @@
     position: absolute;
     top: -12px;
     right: -12px;
+    pointer-events: none;
 }
 
 .rightCornerLargeRibbonText {
@@ -45,6 +47,7 @@
     position: absolute;
     top: -10px;
     left: -10px;
+    pointer-events: none;
 }
 
 .leftCornerRibbonText {
@@ -64,6 +67,7 @@
     position: absolute;
     top: -12px;
     left: -12px;
+    pointer-events: none;
 }
 
 .leftCornerLargeRibbonText {
@@ -83,6 +87,7 @@
     position: absolute;
     top: 0;
     right: -10px;
+    pointer-events: none;
 }
 
 .rightRibbonText {
@@ -96,6 +101,7 @@
     position: absolute;
     top: 0;
     right: -15px;
+    pointer-events: none;
 }
 
 .rightLargeRibbonText {
@@ -109,6 +115,7 @@
     position: absolute;
     top: 0;
     left: -10px;
+    pointer-events: none;
 }
 
 .leftRibbonText {
@@ -122,6 +129,7 @@
     position: absolute;
     top: 0;
     left: -15px;
+    pointer-events: none;
 }
 
 .leftLargeRibbonText {
